# jaqmc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  makefile  pyproject.toml  requirements.txt  run.py  setup.py  tox.ini
.github/: common-header.txt
.github/workflows/: ci.yml  docs.yml
docs/: citing.md  conf.py  config_reference.py  index.md  jaqmc_sphinx_utils.py  mathjax_in_paragraph.py  protocol_autodoc.py  roadmap.md  typehints_formatter.py
docs/_static/: custom.css  export.py  readthedocs.js  rtd-search-theme.css  search-scorer.js
docs/api-reference/: atomic.md  configuration.md  estimators.md  geometry.md  index.md  laplacian.md  optimizers.md  samplers.md  stages.md  utilities.md  wavefunctions.md  workflows.md  writers.md
docs/extending/: configuration.md  contributing.md  index.md  jax-for-jaqmc.md  runtime-data-conventions.md  wavefunctions.md  writing-workflows.md
docs/extending/custom-components/: estimators.md  index.md  optimizers.md  samplers.md  writers.md
docs/extending/forward-laplacian/: custom-rules.md  index.md  internals.md
docs/getting-started/: concepts.md  quick-start.md
docs/guide/: analyzing-evaluations.md  analyzing-wavefunctions.md  configuration.md  index.md  multi-device.md  periodic-boundaries.md  running-workflows.md  runtime-configuration.md  sampling.md  training-stats.md  troubleshooting.md  wavefunction.md  writers.md
docs/guide/estimators/: density.md  ecp.md  ewald.md  index.md  kinetic.md  loss-grad.md  ph.md  spin.md
docs/guide/optimizers/: index.md  sr-spring-march.md
docs/systems/: index.md
docs/systems/hall/: energy-corrections.md  eval.md  index.md  train.md
docs/systems/molecule/: eval.md  index.md  train.md
docs/systems/solid/: eval.md  index.md  train.md
examples/dmc/: dmc_config.py
examples/dmc/deeperwin/: deeperwin_model.py  run.py
examples/dmc/ferminet/: run.py
examples/dmc/lapnet/: run.py
examples/loss/: loss_config.py
examples/loss/lapnet/: atom_spin_state.py  run.py
examples/pp/lapnet/: Makefile  run.py
jaqmc/: __init__.py
jaqmc/dmc/: __init__.py  branch.py  branch_fix_size.py  ckpt_handler.py  ckpt_metric_manager.py  data_path.py  dmc.py  effective_time_step_calculator.py  energy_estimator.py  hamiltonian.py  metric_manager.py  position_update.py  state.py  storage_handler.py  utils.py
jaqmc/loss/: factory.py  overlap_penalty.py  spin_penalty.py  utils.py  vmc.py
jaqmc/pp/: hamiltonian.py  special.py
jaqmc/pp/ecp/: data.py
jaqmc/pp/ph/: data.py
legacy_examples/: README.md
legacy_examples/dmc/: dmc_config.py
legacy_examples/dmc/deeperwin/: deeperwin_model.py  run.py
legacy_examples/dmc/ferminet/: run.py
legacy_examples/dmc/lapnet/: run.py
legacy_examples/loss/: loss_config.py
legacy_examples/loss/lapnet/: atom_spin_state.py  run.py
legacy_examples/pp/lapnet/: Makefile  run.py
licenses/: Sphinx-BSD-2-Clause.txt
pseudopotentials/: Sc.0.21_187_tr2.nwchem  Sc.0.21_187_tr4.nwchem  Sc.ccecp.nwchem
src/jaqmc/: array_types.py  data.py
src/jaqmc/app/: cli.py  (+1 more)
src/jaqmc_legacy/: __init__.py
tests/: cli_dry_run_test.py  conftest.py  jax_version.py
tests/app/: system_unit_test.py
tests/dmc/: branch_fix_size_test.py  branch_test.py  ckpt_handler_test.py  ckpt_metric_manager_test.py  data_path_test.py  dmc_test.py  energy_estimator_test.py  hdfs_storage_handler_test.py  metric_manager_test.py  position_update_test.py  recovery_test.py  state_test.py  storage_handler_test.py  utils_single_host_test.py  utils_two_hosts_test.py
tests/estimator/: density_test.py  estimator_test.py  ewald_test.py  kinetic_forward_laplacian_test.py  loss_grad_test.py  spin_test.py
tests/geometry/: geometry_test.py  pbc_test.py
tests/hydrogen/: atom_test.py  molecule_test.py
tests/integration/: __init__.py  checkpoint_test.py  distributed_test.py
tests/laplacian/: __init__.py  conftest.py  control_flow_and_transform_test.py  custom_rule_test.py  explicit_sharding_test.py  fallback_policy_test.py  flax_integration_test.py  helpers.py  input_fixtures.py  interpreter_environment_test.py  public_api_test.py  pytree_input_test.py  registry_extensibility_test.py  shard_map_test.py  sharding_fixtures.py
tests/legacy/: branching_test.py  dmc_test.py  energy_estimator_test.py  position_update_test.py  recovery_test.py  state_io_test.py  utils_test.py
tests/optimizer/: jasr_test.py  kfac_test.py
tests/utils/: checkpoint_test.py  chunked_vmap_test.py  config_test.py  distributed.py  module_resolver_test.py  parallel_jax_test.py  runtime_test.py  wiring_test.py  yaml_format_test.py
tests/wavefunction/: envelope_test.py  jastrow_test.py  molecule_wavefunction_test.py  solid_test.py
tests/workflow/: preset_test.py  workflow_config_test.py
tests/writer/: console_writer_test.py  writer_test.py
(+290 files in other folders)
